# EBD_agv

./: .augment-guidelines  .dockerignore  .gitignore  AGV名稱變更設定指南.md  Analyze this codebase to generate or upd.md  CLAUDE.md  Dockerfile  Dockerfile.agvc  LICENSE  README.md  TAFL_TESTING.md  THIRD_PARTY_LICENSES.md  TOOLS_USAGE_GUIDE.md  change_path_name.sh  check-network.service  check_network.sh  check_packages_install.bash  count_python_lines_rg.sh  count_web_lines_rg.sh  docker-compose.agvc.yml  docker-compose.yml  docs-ai-verification-prompt.md  function_update_summary.md  nftables.conf  r  rosagv-tools.sh  start_room_task_build.sh  test_flow_correct.yaml  test_flow_with_connections.yaml  test_restart.sh  路徑名稱變更說明.md
.claude/: settings.json
.github/: copilot-instructions.md  copilot-instructions.zh-Hant.md
Design/: CTLogo.drawio  K-Studio-Icon.drawio  RosAGV.drawio  SHEN_CarGo流程.drawio  SHEN_WORK_ID.drawio  alan-safety.drawio  alan-safety流程.drawio  database.drawio  project.drawio  wcs-complete-design.md  zenoh測試.drawio
agents/: MIGRATION_REPORT.md  test_if_card_deletion.html
ai-agents/: container-development-rules.md  database-operations-rules.md  ros2-development-rules.md  tafl-language-rules.md  unified-tools-usage.md  web-api-development-rules.md
app/: .augment-guidelines  README.md  agv_startup.bash  agvcui-rebuild-guide.md  check_packages.bash  check_task_fields.py  debug_create.py  fastapi_ros.service  integrate_tafl_editor.sh  routerconfig.agvc.json5  routerconfig.json5  setup.bash  setup.bash.old  startup.agv.bash  startup.agvc.bash  startup.bash  tafl_editor_direct_integration.py  tafl_editor_enhanced.py  tafl_wcs_http_service.py  test_agv_table_query.py  test_control_switch.py  test_direct_db_query.py  test_flow_execution.py  test_flow_log_integration.py  test_foreach_function.py  test_pre_dryer_calculation.py  test_rack_status_logic.py  test_sql_query_service.py  test_task_exists.py  update_agvcui_router.py  update_function_cache.py  verify_phase2_installation.py
app/agv_ws/src/agv_base/: CLAUDE.md  package.xml  setup.cfg  setup.py
app/agv_ws/src/agv_base/agv_base/: agv_node_base.py  agv_status.py  base_context.py  context_abc.py  event.py  hokuyo_dms_8bit.py  robot.py  robot_parameter_abc.py  test_agv_node.py  test_agv_node_event.py
app/agv_ws/src/agv_base/agv_base/agv_states/: Running_state.py  idle_state.py  mission_select_state.py  wait_robot_state.py  write_path_state.py
app/agv_ws/src/agv_base/agv_base/note/: test_robot_combined_read.py
app/agv_ws/src/agv_base/agv_base/states/: _manual_state.py  auto_state.py  error_state.py  idle_state.py  manual_state.py  practise_test.py  state.py  test_a_state.py  test_b_state.py  test_none_state.py
app/db_proxy_ws/src/db_proxy_interfaces/: CMakeLists.txt  package.xml
app/db_proxy_ws/src/db_proxy_interfaces/msg/: AGV.msg  AGVs.msg  Carrier.msg  Eqp.msg  EqpSignal.msg  Eqps.msg  Fetch.msg  Location.msg  Locations.msg  Rack.msg  Racks.msg  Tables.msg  Task.msg  Tasks.msg  Work.msg  Works.msg
app/db_proxy_ws/src/db_proxy_interfaces/srv/: AcquireTrafficArea.srv  AddTrafficArea.srv  CarrierQuery.srv  EqpSignalQuery.srv  GenericQuery.srv  RackQuery.srv  SqlQuery.srv  UpdateCarrier.srv  UpdateRack.srv  UpdateTask.srv
app/flow_wcs_ws_old/src/flow_wcs/: package.xml  test_decorator_functions.py
app/flow_wcs_ws_old/src/flow_wcs/flow_wcs/: database.py  tafl_integration.py
app/flow_wcs_ws_old/src/flow_wcs/flow_wcs/backups/flow_executor_versions/: flow_executor.py.backup_20250818  flow_executor_backup.py  flow_executor_improved.py  flow_executor_orig_with_fixes.py
app/flow_wcs_ws_old/src/flow_wcs/flow_wcs/functions/: __init__.py  base.py  control.py
app/flow_wcs_ws_old/src/flow_wcs/launch/: flow_wcs_launch.py
app/flow_wcs_ws_old/src/flow_wcs/test/: test_flow_executor.py
app/keyence_plc_ws/src/cpp_keyence_plc/: CMakeLists.txt  package.xml
app/keyence_plc_ws/src/cpp_keyence_plc/src/: keyence_plc_com.cpp  keyence_plc_com.hpp  speed_test.cpp
app/shared_constants_ws/src/shared_constants/: package.xml  setup.cfg  setup.py
app/shared_constants_ws/src/shared_constants/resource/: shared_constants
app/shared_constants_ws/src/shared_constants/shared_constants/: __init__.py  equipment_stations.py  log_cleanup_config.py  task_status.py  work_ids.py
app/shared_constants_ws/src/shared_constants/test/: test_equipment_stations_custom_mapping.py
app/tafl_ws/src/tafl/: package.xml  setup.cfg  setup.py
app/tafl_ws/src/tafl/tafl/: __init__.py  ast_nodes.py  cli.py  executor.py  parser.py  parser.py.backup  validator.py
app/tafl_ws/src/tafl/test/: __init__.py  test_executor.py  test_parser.py  test_strict_v112.py  test_validator.py  test_verbs.py
app/wcs_ws/src/kuka_wcs/: CLAUDE.md  README.md  package.xml  setup.py  test_empty_rack_condition.py
app/wcs_ws/src/kuka_wcs/config/: kuka_wcs_config.yaml
app/wcs_ws/src/kuka_wcs/docs/: CHECK_ROOM_CARRIER_GUIDE.md  TASK_HANDLER_CONDITION_CHECK_MIGRATION.md
app/wcs_ws/src/kuka_wcs/kuka_wcs/: __init__.py  kuka_wcs_node.py  task_decision_engine.py
app/wcs_ws/src/kuka_wcs/kuka_wcs/task_handler/: KUKA任務處理器架構說明.md  __init__.py  agv_rotate_handler.py  empty_rack_to_boxout.py  emptyarea_to_boxout_handler.py  emptyrack_to_boxout_or_emptyarea_handler.py  full_rack_to_manual_receive.py  fullrack_to_receivearea_handler.py  rack_rotate_180.py  ready_rack_to_boxin.py  readyrack_to_boxin_handler.py  recieverack_to_emptyarea_handler.py
app/wcs_ws/src/kuka_wcs/launch/: kuka_wcs_launch.py  test_launch.py
app/wcs_ws/src/kuka_wcs/tests/: test_check_room_carrier.py  test_modified_check_room_carrier.py
app/wcs_ws/src/transfer_box_task_build/: BUGFIX_LOCATION_CHECK.md  CHANGELOG.md  DEPLOYMENT_SUCCESS.md  FINAL_LOGIC_CORRECTION.md  README_PLC_READ.md  package.xml  setup.cfg  setup.py
app/wcs_ws/src/transfer_box_task_build/launch/: transfer_box_task_build.launch.py
app/wcs_ws/src/transfer_box_task_build/transfer_box_task_build/: __init__.py  config.py  database_helper.py  transfer_box_manager.py  transfer_box_task_build_node.py
design/: OP-UI-Icon.drawio  (+7 more)
(+1859 files in other folders)
