<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_base</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yaze.lin.j303@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- 執行依賴 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>db_proxy_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
