<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flow_wcs</name>
  <version>1.0.0</version>
  <description>Flow WCS - Linear Flow-based WCS System for AGV Control</description>
  <maintainer email="dev@rosagv.com">RosAGV Development Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>db_proxy</depend>
  <depend>db_proxy_interfaces</depend>
  <depend>agv_interfaces</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>