<?xml version="1.0"?>
<package format="3">
  <name>shared_constants</name>
  <version>1.0.0</version>
  <description>共享常數定義套件，包含 AGV 和 AGVC 系統共用的常數定義</description>
  <maintainer email="yaze.lin.j303@gmail.com">yaze</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>