<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tafl</name>
  <version>1.0.0</version>
  <description>TAFL - Task Automation Flow Language for WCS/AGV automation</description>
  <maintainer email="dev@chingtech.com">Ching Tech</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>python3-yaml</depend>
  
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>