[metadata]
name = tafl
version = 1.0.0
author = Ching Tech
author_email = dev@chingtech.com
description = TAFL - Task Automation Flow Language for WCS/AGV automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chingtech/tafl
project_urls =
    Bug Tracker = https://github.com/chingtech/tafl/issues
    Documentation = https://github.com/chingtech/tafl/wiki
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Automation
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
install_requires =
    pyyaml>=6.0
    typing-extensions>=4.0
    dataclasses>=0.6;python_version<"3.7"
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = tafl*
exclude = test*

[options.package_data]
tafl = 
    *.yaml
    *.json
    schema/*.json

[options.extras_require]
dev = 
    pytest>=7.0
    pytest-cov>=4.0
    pytest-asyncio>=0.21
    black>=22.0
    flake8>=5.0
    mypy>=0.991
    pylint>=2.15
docs = 
    sphinx>=5.0
    sphinx-rtd-theme>=1.0
    autodoc>=0.5
test = 
    pytest>=7.0
    pytest-cov>=4.0
    pytest-asyncio>=0.21
    pytest-mock>=3.10

[options.entry_points]
console_scripts =
    tafl = tafl.cli:main
    tafl-validate = tafl.cli:validate_command
    tafl-convert = tafl.cli:convert_command
    tafl-run = tafl.cli:run_command
    tafl-info = tafl.cli:info_command

[tool:pytest]
testpaths = test
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --cov=tafl
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    -p no:warnings

[coverage:run]
source = tafl
omit = 
    */test/*
    */tests/*
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg
ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_any_unimported = False
no_implicit_optional = True
check_untyped_defs = True
show_error_codes = True
show_error_context = True
pretty = True

[mypy-yaml.*]
ignore_missing_imports = True

[pylint]
max-line-length = 100
disable = 
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    W0212,  # protected-access
    C0301,  # line-too-long (handled by black)