<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_wcs</name>
  <version>0.0.0</version>
  <description>KUKA WCS (Warehouse Control System) for AGV task management and decision making</description>
  <maintainer email="akifally@ching-tech.com">akifally</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- Custom interfaces dependencies -->
  <depend>db_proxy_interfaces</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
