<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transfer_box_task_build</name>
  <version>1.0.0</version>
  <description>Transfer Box Task Build - 通用傳送箱 PLC 雙向通訊與自動任務建立套件</description>
  <maintainer email="team@rosagv.com">RosAGV Team</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 Dependencies -->
  <depend>rclpy</depend>

  <!-- Custom Dependencies -->
  <depend>plc_proxy</depend>
  <depend>db_proxy</depend>
  <depend>shared_constants</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
